--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AZ_Laundry</string>
+    <string name="facebook_app_id">505127202289060</string><string name="facebook_client_token">481d393d73151315eee18529ca7622dd</string>
 </resources>
